# simple_media_player

./: CMakeLists.txt  README.md  main.cpp  makefile
headers/: play_list.hpp
qml/: ControlPanel.qml  ControllerButton.qml  FindFiles.qml  MetaDataInfo.qml  MetaInfoWindow.qml  OpenFileItem.qml  PlaybackButton.qml  PlaybackSlider.qml  TrackInfo.qml  main.qml
src/: play_list.cpp
